# rustrum

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  action.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
crates/rustrum-cli/: Cargo.toml
crates/rustrum-cli/src/: decrypt.rs  encrypt.rs  ffmpeg.rs  io_util.rs  main.rs
crates/rustrum-cli/tests/: cli_tests.rs
crates/rustrum-core/: Cargo.toml
crates/rustrum-core/src/: crypto.rs  error.rs  header.rs  io.rs  lib.rs
crates/rustrum-wasm/: Cargo.toml
crates/rustrum-wasm/src/: lib.rs
data/: manifest.mpd
docs/: cli.md  core.md  sdk.md  wasm.md
