[package]
name = "rustrum-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rpassword = "7"
rand = "0.10"
tempfile = "3"
rayon = "1.12"
memmap2 = "0.9"
rustrum-core = { path = "../rustrum-core" }
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

