[package]
name = "rustrum-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = { version = "0.11", default-features = false, features = ["alloc"] }
aes-gcm = { version = "0.11", default-features = false, features = ["alloc", "aes"] }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
byteorder = { version = "1.5", default-features = false }
